--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"css-loader": "^6.7.3",
 		"gh-pages": "^5.0.0",
 		"html-webpack-plugin": "^5.5.1",
+		"style-loader": "^3.3.2",
 		"webpack": "^5.81.0",
 		"webpack-cli": "^5.0.2",
 		"webpack-dev-server": "^4.13.3"
